# Analytical-coding-and-Web-Searching-agent-crews

./: README.md
analytical_coding_crew/: README.md  final_report.md  pyproject.toml
analytical_coding_crew/data/Stock_prices/: Dummy_stock_prices.csv
analytical_coding_crew/src/analytical_coding_crew/: crew.py  main.py
analytical_coding_crew/src/analytical_coding_crew/config/: agents.yaml  tasks.yaml
web_searching_crew/: README.md  pyproject.toml  report.md
web_searching_crew/src/web_searching_crew/: crew.py  main.py
web_searching_crew/src/web_searching_crew/config/: agents.yaml  tasks.yaml
