[project]
name = "analytical_coding_crew"
version = "0.1.0"
description = "Analytical_Coding_Crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
analytical_coding_crew = "analytical_coding_crew.main:run"
run_crew = "analytical_coding_crew.main:run"
train = "analytical_coding_crew.main:train"
replay = "analytical_coding_crew.main:replay"
test = "analytical_coding_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
