[project]
name = "web_searching_crew"
version = "0.1.0"
description = "web_searching_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
web_searching_crew = "web_searching_crew.main:run"
run_crew = "web_searching_crew.main:run"
train = "web_searching_crew.main:train"
replay = "web_searching_crew.main:replay"
test = "web_searching_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
